# fast_api

./: .coverage  .env  README copy.md  README.md  pyproject.toml
migrations/: env.py
src/fast_api/: app.py  models.py  settings.py
tests/: .coverage  conftest.py  test_app.py  test_db.py
